# agent-wallet

./: .env.example  .gitignore  README.md  mcp_server.py  pyproject.toml  run_mcp.sh  wallet_config.example.yaml  wallet_config.yaml
agent_wallet/: __init__.py  config.py  loader.py  permissions.py  wallet.py
examples/: basic_usage.py  framework_integration.py  yaml_config.py
